WPF:View implemented basic Ui

--- a/DesktopWPFApp/MainWindow.xaml
+++ b/DesktopWPFApp/MainWindow.xaml
@@ -3,10 +3,86 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:sc="clr-namespace:DesktopWPFApp.Models"
         xmlns:local="clr-namespace:DesktopWPFApp"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
-    <Grid>
-
+        Title="ASAP Caller"
+        WindowState="Maximized"
+        Height="1080"
+        Width="1920"
+        Loaded="Window_Loaded">
+    <Grid Background="lime">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="1*" />
+            <RowDefinition Height="1*" />
+            <RowDefinition Height="1*" />
+        </Grid.RowDefinitions>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="1*" />
+            <ColumnDefinition Width="1*" />
+            <ColumnDefinition Width="1*" />
+        </Grid.ColumnDefinitions>
+        <DockPanel Grid.Row="1"
+                   Grid.Column="1">
+            <Button x:Name="btnMain"
+                    Content="ASAP Caller Online"
+                    FontSize="75" />
+        </DockPanel>
+        <Canvas />
+        <StackPanel Grid.RowSpan="3"
+                    Orientation="Horizontal">
+            <StackPanel x:Name="pnlSettingsContainer"
+                        Orientation="Vertical"
+                        Background="#484848"
+                        Width="287">
+                <DockPanel Background="#282828">
+                    <Button HorizontalAlignment="Left"
+                            x:Name="btnSettingsToggle"
+                            Height="64"
+                            Width="64"
+                            Margin="5"
+                            Click="btnSettingsToggle_Click" />
+                    <Label Content="Settings"
+                           FontSize="48"
+                           Foreground="White"
+                           Width="208" />
+                </DockPanel>
+                <DockPanel>
+                    <Label Content="Connection"
+                           HorizontalAlignment="Left"
+                           FontSize="32"
+                           Foreground="White"
+                           Width="196" />
+                    <CheckBox x:Name="chbxConnection"
+                              Checked="chbxConnection_Checked"
+                              Unchecked="chbxConnection_Unchecked"
+                                 HorizontalAlignment="Right"
+                                 VerticalAlignment="Center"
+                                 Margin="5"
+                                 Width="64"
+                                 Height="32" />
+                </DockPanel>
+                <DockPanel>
+                    <Label Content="Port"
+                           FontSize="32"
+                           Foreground="White"
+                           Width="72" />
+                    <ComboBox x:Name="cmbPortNames"
+                              FontSize="24"
+                              Width="208"
+                              Margin="5,10"
+                              SelectionChanged="cmbPortNames_SelectionChanged" />
+                </DockPanel>
+                <DockPanel>
+                    <TextBlock x:Name="pitch"
+                               Text="0"
+                               FontSize="32" />
+                    <TextBlock x:Name="roll"
+                               Text="0"
+                               FontSize="32"
+                               Width="50" />
+                </DockPanel>
+            </StackPanel>
+        </StackPanel>
     </Grid>
 </Window>
