WPF:ViewModels added basic user interaction

--- a/DesktopWPFApp/App.xaml
+++ b/DesktopWPFApp/App.xaml
@@ -4,6 +4,21 @@
              xmlns:local="clr-namespace:DesktopWPFApp"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
-         
+        <Style x:Key="aniSlide"
+               TargetType="StackPanel">
+            <Style.Triggers>
+                <Trigger Property="IsMouseOver"
+                         Value="True">
+                    <Trigger.EnterActions>
+                        <BeginStoryboard>
+                            <Storyboard>
+                                <DoubleAnimation Storyboard.TargetProperty="(StackPanel.Width)"
+                                                 To="500" />
+                            </Storyboard>
+                        </BeginStoryboard>
+                    </Trigger.EnterActions>
+                </Trigger>
+            </Style.Triggers>
+        </Style>
     </Application.Resources>
 </Application>
