--- a/DesktopWPFApp/MainWindow.xaml
+++ b/DesktopWPFApp/MainWindow.xaml
@@ -13,20 +13,12 @@
         Width="1920"
         Loaded="Window_Loaded">
     <Window.Resources>
+
         <!--#region Main Button-->
-        <ControlTemplate x:Key="btnMainConnectedStyle" TargetType="{x:Type Button}">
+        <ControlTemplate x:Key="btnMainConnectedStyle"
+                         TargetType="{x:Type Button}">
             <Grid Height="700"
                   Width="700">
-                <Ellipse Height="640"
-                         Stroke="{x:Null}"
-                         Canvas.Top="-270.122"
-                         Width="640"
-                         Canvas.Left="-8.5"
-                         HorizontalAlignment="Center"
-                         Fill="#7F000000"
-                         VerticalAlignment="Center">
-
-                </Ellipse>
                 <Ellipse x:Name="innerEllipse"
                          Height="630"
                          Stroke="{x:Null}"
@@ -43,7 +35,11 @@
                                           Offset="1" />
                         </RadialGradientBrush>
                     </Ellipse.Fill>
+                    <Ellipse.Effect>
+                        <DropShadowEffect BlurRadius="30" />
+                    </Ellipse.Effect>
                 </Ellipse>
+                <Path></Path>
                 <ContentPresenter HorizontalAlignment="Center"
                                   VerticalAlignment="Center" />
             </Grid>
@@ -68,19 +64,8 @@
                          TargetType="{x:Type Button}">
             <Grid Height="700"
                   Width="700">
-                <Ellipse Height="640"
-                         Stroke="{x:Null}"
-                         Canvas.Top="-270.122"
-                         Width="640"
-                         Canvas.Left="-8.5"
-                         HorizontalAlignment="Center"
-                         Fill="#7F000000"
-                         VerticalAlignment="Center">
-
-                </Ellipse>
                 <Ellipse x:Name="innerEllipse"
                          Height="630"
-                         Stroke="{x:Null}"
                          Width="630"
                          HorizontalAlignment="Center"
                          VerticalAlignment="Center"
@@ -94,7 +79,98 @@
                                           Offset="1" />
                         </RadialGradientBrush>
                     </Ellipse.Fill>
+                    <Ellipse.Effect>
+                        <DropShadowEffect BlurRadius="30" />
+                    </Ellipse.Effect>
                 </Ellipse>
+                <ContentPresenter HorizontalAlignment="Center"
+                                  VerticalAlignment="Center" />
+            </Grid>
+            <ControlTemplate.Triggers>
+                <Trigger Property="IsMouseOver"
+                         Value="true">
+                    <Setter TargetName="innerEllipse"
+                            Property="Fill">
+                        <Setter.Value>
+                            <RadialGradientBrush>
+                                <GradientStop Color="#454545"
+                                              Offset="0.5" />
+                                <GradientStop Color="#FF6B6B6B"
+                                              Offset="1" />
+                            </RadialGradientBrush>
+                        </Setter.Value>
+                    </Setter>
+                </Trigger>
+            </ControlTemplate.Triggers>
+        </ControlTemplate>
+        <ControlTemplate x:Key="btnMainAccidentStyle"
+                         TargetType="{x:Type Button}">
+            <Grid Height="700"
+                  Width="700">
+                <Ellipse x:Name="innerEllipse"
+                         Height="630"
+                         Width="630"
+                         HorizontalAlignment="Center"
+                         VerticalAlignment="Center"
+                         Canvas.Left="-4"
+                         Canvas.Top="-265">
+                    <Ellipse.Fill>
+                        <RadialGradientBrush>
+                            <GradientStop Color="Red"
+                                          Offset="0.856" />
+                            <GradientStop Color="#FFFB8383"
+                                          Offset="1" />
+                        </RadialGradientBrush>
+                    </Ellipse.Fill>
+                    <Ellipse.Effect>
+                        <DropShadowEffect BlurRadius="30" />
+                    </Ellipse.Effect>
+                </Ellipse>
+                <ContentPresenter HorizontalAlignment="Center"
+                                  VerticalAlignment="Center" />
+            </Grid>
+            <ControlTemplate.Triggers>
+                <Trigger Property="IsMouseOver"
+                         Value="true">
+                    <Setter TargetName="innerEllipse"
+                            Property="Fill">
+                        <Setter.Value>
+                            <RadialGradientBrush>
+                                <GradientStop Color="Red"
+                                              Offset="0.5" />
+                                <GradientStop Color="#FFFB8383"
+                                              Offset="1" />
+                            </RadialGradientBrush>
+                        </Setter.Value>
+                    </Setter>
+                </Trigger>
+            </ControlTemplate.Triggers>
+        </ControlTemplate>
+        <ControlTemplate x:Key="btnMainStopCallStyle"
+                         TargetType="{x:Type Button}">
+            <Grid Height="350"
+                  Width="640">
+                <Ellipse x:Name="innerEllipse"
+                         Height="325"
+                         Stroke="{x:Null}"
+                         Width="325"
+                         HorizontalAlignment="Center"
+                         VerticalAlignment="Center"
+                         Canvas.Left="-4"
+                         Canvas.Top="-265">
+                    <Ellipse.Fill>
+                        <RadialGradientBrush>
+                            <GradientStop Color="#FF00FF03"
+                                          Offset="0.856" />
+                            <GradientStop Color="#FF83FB84"
+                                          Offset="1" />
+                        </RadialGradientBrush>
+                    </Ellipse.Fill>
+                    <Ellipse.Effect>
+                        <DropShadowEffect BlurRadius="30" />
+                    </Ellipse.Effect>
+                </Ellipse>
+                <Path></Path>
                 <ContentPresenter HorizontalAlignment="Center"
                                   VerticalAlignment="Center" />
             </Grid>
@@ -137,6 +213,7 @@
 
     <Grid x:Name="grdContainer"
           Style="{DynamicResource backgroundDisconnectedStye}">
+
         <Grid.RowDefinitions>
             <RowDefinition Height="1*" />
             <RowDefinition Height="1*" />
@@ -147,17 +224,44 @@
             <ColumnDefinition Width="1*" />
             <ColumnDefinition Width="1*" />
         </Grid.ColumnDefinitions>
-        <DockPanel Grid.Row="0"
-                   Grid.Column="0"
-                   Grid.ColumnSpan="3"
-                   Grid.RowSpan="3">
+        <Grid Grid.Row="0"
+              Grid.Column="0"
+              Grid.ColumnSpan="3"
+              Grid.RowSpan="3">
             <Button x:Name="btnMain"
                     Content="ASAP Caller"
-                    FontSize="75"
+                    FontSize="60"
                     Foreground="White"
-                    Template="{DynamicResource btnMainDisconnectedStyle}">
-            </Button>
-        </DockPanel>
+                    Template="{DynamicResource btnMainDisconnectedStyle}" />
+            <TextBlock x:Name="txtblkQ"
+                       Text="Are You Ok?"
+                       FontSize="52"
+                       Foreground="White"
+                       HorizontalAlignment="Center"
+                       VerticalAlignment="Top"
+                       Visibility="Hidden"
+                       Margin="0,389,0,0" />
+            <TextBlock x:Name="txtblkStatus"
+                       Text="Calling in"
+                       FontSize="52"
+                       Foreground="White"
+                       Canvas.Left="213"
+                       Canvas.Top="245"
+                       Visibility="Hidden"
+                       HorizontalAlignment="Center"
+                       VerticalAlignment="Top"
+                       Margin="0,591,0,0" />
+            <TextBlock x:Name="txtblkCount"
+                       Text="10"
+                       FontSize="52"
+                       Foreground="White"
+                       Canvas.Left="213"
+                       Canvas.Top="245"
+                       Visibility="Hidden"
+                       HorizontalAlignment="Center"
+                       VerticalAlignment="Top"
+                       Margin="0,693,0,0" />
+        </Grid>
         <Canvas />
         <StackPanel x:Name="pnlSettingsContainer"
                     Grid.RowSpan="3"
@@ -172,5 +276,14 @@
                       Margin="5"
                       Unchecked="chkSettingsToggle_Unchecked"
                       Checked="chkSettingsToggle_Checked" />
+        <Button x:Name="btnStopCall"
+                Grid.Row="2"
+                Grid.Column="2"
+                Template="{StaticResource btnMainStopCallStyle}"
+                Click="btnStopCall_Click"
+                Content="Stop Calling"
+                FontSize="54"
+                Foreground="White"
+                Visibility="Hidden" />
     </Grid>
 </Window>
