--- a/DesktopWPFApp/MainWindow.xaml
+++ b/DesktopWPFApp/MainWindow.xaml
@@ -4,7 +4,7 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:sc="clr-namespace:DesktopWPFApp.Models"
-        xmlns:views="clr-namespace:DesktopWPFApp.UserControls"
+        xmlns:views="clr-namespace:DesktopWPFApp.Views"
         xmlns:local="clr-namespace:DesktopWPFApp"
         mc:Ignorable="d"
         Title="ASAP Caller"
@@ -12,208 +12,8 @@
         Height="1080"
         Width="1920"
         Loaded="Window_Loaded">
-    <Window.Resources>
-
-        <!--#region Main Button-->
-        <ControlTemplate x:Key="btnMainConnectedStyle"
-                         TargetType="{x:Type Button}">
-            <Grid Height="700"
-                  Width="700">
-                <Ellipse x:Name="innerEllipse"
-                         Height="630"
-                         Stroke="{x:Null}"
-                         Width="630"
-                         HorizontalAlignment="Center"
-                         VerticalAlignment="Center"
-                         Canvas.Left="-4"
-                         Canvas.Top="-265">
-                    <Ellipse.Fill>
-                        <RadialGradientBrush>
-                            <GradientStop Color="#FF00FF03"
-                                          Offset="0.856" />
-                            <GradientStop Color="#FF83FB84"
-                                          Offset="1" />
-                        </RadialGradientBrush>
-                    </Ellipse.Fill>
-                    <Ellipse.Effect>
-                        <DropShadowEffect BlurRadius="30" />
-                    </Ellipse.Effect>
-                </Ellipse>
-                <Path></Path>
-                <ContentPresenter HorizontalAlignment="Center"
-                                  VerticalAlignment="Center" />
-            </Grid>
-            <ControlTemplate.Triggers>
-                <Trigger Property="IsMouseOver"
-                         Value="true">
-                    <Setter TargetName="innerEllipse"
-                            Property="Fill">
-                        <Setter.Value>
-                            <RadialGradientBrush>
-                                <GradientStop Color="#FF00FF03"
-                                              Offset="0.5" />
-                                <GradientStop Color="#FF83FB84"
-                                              Offset="1" />
-                            </RadialGradientBrush>
-                        </Setter.Value>
-                    </Setter>
-                </Trigger>
-            </ControlTemplate.Triggers>
-        </ControlTemplate>
-        <ControlTemplate x:Key="btnMainDisconnectedStyle"
-                         TargetType="{x:Type Button}">
-            <Grid Height="700"
-                  Width="700">
-                <Ellipse x:Name="innerEllipse"
-                         Height="630"
-                         Width="630"
-                         HorizontalAlignment="Center"
-                         VerticalAlignment="Center"
-                         Canvas.Left="-4"
-                         Canvas.Top="-265">
-                    <Ellipse.Fill>
-                        <RadialGradientBrush>
-                            <GradientStop Color="#454545"
-                                          Offset="0.856" />
-                            <GradientStop Color="#FF6B6B6B"
-                                          Offset="1" />
-                        </RadialGradientBrush>
-                    </Ellipse.Fill>
-                    <Ellipse.Effect>
-                        <DropShadowEffect BlurRadius="30" />
-                    </Ellipse.Effect>
-                </Ellipse>
-                <ContentPresenter HorizontalAlignment="Center"
-                                  VerticalAlignment="Center" />
-            </Grid>
-            <ControlTemplate.Triggers>
-                <Trigger Property="IsMouseOver"
-                         Value="true">
-                    <Setter TargetName="innerEllipse"
-                            Property="Fill">
-                        <Setter.Value>
-                            <RadialGradientBrush>
-                                <GradientStop Color="#454545"
-                                              Offset="0.5" />
-                                <GradientStop Color="#FF6B6B6B"
-                                              Offset="1" />
-                            </RadialGradientBrush>
-                        </Setter.Value>
-                    </Setter>
-                </Trigger>
-            </ControlTemplate.Triggers>
-        </ControlTemplate>
-        <ControlTemplate x:Key="btnMainAccidentStyle"
-                         TargetType="{x:Type Button}">
-            <Grid Height="700"
-                  Width="700">
-                <Ellipse x:Name="innerEllipse"
-                         Height="630"
-                         Width="630"
-                         HorizontalAlignment="Center"
-                         VerticalAlignment="Center"
-                         Canvas.Left="-4"
-                         Canvas.Top="-265">
-                    <Ellipse.Fill>
-                        <RadialGradientBrush>
-                            <GradientStop Color="Red"
-                                          Offset="0.856" />
-                            <GradientStop Color="#FFFB8383"
-                                          Offset="1" />
-                        </RadialGradientBrush>
-                    </Ellipse.Fill>
-                    <Ellipse.Effect>
-                        <DropShadowEffect BlurRadius="30" />
-                    </Ellipse.Effect>
-                </Ellipse>
-                <ContentPresenter HorizontalAlignment="Center"
-                                  VerticalAlignment="Center" />
-            </Grid>
-            <ControlTemplate.Triggers>
-                <Trigger Property="IsMouseOver"
-                         Value="true">
-                    <Setter TargetName="innerEllipse"
-                            Property="Fill">
-                        <Setter.Value>
-                            <RadialGradientBrush>
-                                <GradientStop Color="Red"
-                                              Offset="0.5" />
-                                <GradientStop Color="#FFFB8383"
-                                              Offset="1" />
-                            </RadialGradientBrush>
-                        </Setter.Value>
-                    </Setter>
-                </Trigger>
-            </ControlTemplate.Triggers>
-        </ControlTemplate>
-        <ControlTemplate x:Key="btnMainStopCallStyle"
-                         TargetType="{x:Type Button}">
-            <Grid Height="350"
-                  Width="640">
-                <Ellipse x:Name="innerEllipse"
-                         Height="325"
-                         Stroke="{x:Null}"
-                         Width="325"
-                         HorizontalAlignment="Center"
-                         VerticalAlignment="Center"
-                         Canvas.Left="-4"
-                         Canvas.Top="-265">
-                    <Ellipse.Fill>
-                        <RadialGradientBrush>
-                            <GradientStop Color="#FF00FF03"
-                                          Offset="0.856" />
-                            <GradientStop Color="#FF83FB84"
-                                          Offset="1" />
-                        </RadialGradientBrush>
-                    </Ellipse.Fill>
-                    <Ellipse.Effect>
-                        <DropShadowEffect BlurRadius="30" />
-                    </Ellipse.Effect>
-                </Ellipse>
-                <Path></Path>
-                <ContentPresenter HorizontalAlignment="Center"
-                                  VerticalAlignment="Center" />
-            </Grid>
-            <ControlTemplate.Triggers>
-                <Trigger Property="IsMouseOver"
-                         Value="true">
-                    <Setter TargetName="innerEllipse"
-                            Property="Fill">
-                        <Setter.Value>
-                            <RadialGradientBrush>
-                                <GradientStop Color="#FF00FF03"
-                                              Offset="0.5" />
-                                <GradientStop Color="#FF83FB84"
-                                              Offset="1" />
-                            </RadialGradientBrush>
-                        </Setter.Value>
-                    </Setter>
-                </Trigger>
-            </ControlTemplate.Triggers>
-        </ControlTemplate>
-        <!--#endregion-->
-        <!--#region Background Styles-->
-        <Style x:Key="backgroundConnectedStye"
-               TargetType="Grid">
-            <Setter Property="Background"
-                    Value="#FF08FF00" />
-        </Style>
-        <Style x:Key="backgroundDisconnectedStye"
-               TargetType="Grid">
-            <Setter Property="Background"
-                    Value="#454545" />
-        </Style>
-        <Style x:Key="backgroundAccidentStye"
-               TargetType="Grid">
-            <Setter Property="Background"
-                    Value="Red" />
-        </Style>
-        <!--#endregion-->
-    </Window.Resources>
-
-    <Grid x:Name="grdContainer"
-          Style="{DynamicResource backgroundDisconnectedStye}">
-
+    
+    <Grid x:Name="grdContainer">
         <Grid.RowDefinitions>
             <RowDefinition Height="1*" />
             <RowDefinition Height="1*" />
@@ -224,45 +24,8 @@
             <ColumnDefinition Width="1*" />
             <ColumnDefinition Width="1*" />
         </Grid.ColumnDefinitions>
-        <Grid Grid.Row="0"
-              Grid.Column="0"
-              Grid.ColumnSpan="3"
-              Grid.RowSpan="3">
-            <Button x:Name="btnMain"
-                    Content="ASAP Caller"
-                    FontSize="60"
-                    Foreground="White"
-                    Template="{DynamicResource btnMainDisconnectedStyle}" />
-            <TextBlock x:Name="txtblkQ"
-                       Text="Are You Ok?"
-                       FontSize="52"
-                       Foreground="White"
-                       HorizontalAlignment="Center"
-                       VerticalAlignment="Top"
-                       Visibility="Hidden"
-                       Margin="0,389,0,0" />
-            <TextBlock x:Name="txtblkStatus"
-                       Text="Calling in"
-                       FontSize="52"
-                       Foreground="White"
-                       Canvas.Left="213"
-                       Canvas.Top="245"
-                       Visibility="Hidden"
-                       HorizontalAlignment="Center"
-                       VerticalAlignment="Top"
-                       Margin="0,591,0,0" />
-            <TextBlock x:Name="txtblkCount"
-                       Text="10"
-                       FontSize="52"
-                       Foreground="White"
-                       Canvas.Left="213"
-                       Canvas.Top="245"
-                       Visibility="Hidden"
-                       HorizontalAlignment="Center"
-                       VerticalAlignment="Top"
-                       Margin="0,693,0,0" />
-        </Grid>
-        <Canvas />
+        <DockPanel Name="pnlContainer" Grid.ColumnSpan="3" 
+                   Grid.RowSpan="3"/>
         <StackPanel x:Name="pnlSettingsContainer"
                     Grid.RowSpan="3"
                     HorizontalAlignment="Left"
@@ -276,14 +39,5 @@
                       Margin="5"
                       Unchecked="chkSettingsToggle_Unchecked"
                       Checked="chkSettingsToggle_Checked" />
-        <Button x:Name="btnStopCall"
-                Grid.Row="2"
-                Grid.Column="2"
-                Template="{StaticResource btnMainStopCallStyle}"
-                Click="btnStopCall_Click"
-                Content="Stop Calling"
-                FontSize="54"
-                Foreground="White"
-                Visibility="Hidden" />
     </Grid>
 </Window>
