--- a/DesktopWPFApp/Views/SettingsView.xaml
+++ b/DesktopWPFApp/Views/SettingsView.xaml
@@ -1,9 +1,9 @@
-﻿<UserControl x:Class="DesktopWPFApp.UserControls.SettingsView"
+﻿<UserControl x:Class="DesktopWPFApp.Views.SettingsView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:DesktopWPFApp.UserControls"
+             xmlns:local="clr-namespace:DesktopWPFApp.Views"
              xmlns:sc="clr-namespace:DesktopWPFApp.Models"
              mc:Ignorable="d" 
              d:DesignHeight="1080"
